--- a/messages/pt/LC_MESSAGES/15924.po
+++ b/messages/pt/LC_MESSAGES/15924.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2019-04-05 15:04+0000\n"
+"PO-Revision-Date: 2019-04-19 13:34+0000\n"
 "Last-Translator: Rui Mendes <xz9@protonmail.com>\n"
 "Language-Team: Portuguese <https://hosted.weblate.org/projects/iso-codes/"
 "iso-15924/pt/>\n"
@@ -110,18 +110,16 @@ msgid "Buhid"
 msgstr "buhid"
 
 #. Name for Cakm
-#, fuzzy
 msgid "Chakma"
-msgstr "cham"
+msgstr "chakma"
 
 #. Name for Cans
 msgid "Unified Canadian Aboriginal Syllabics"
 msgstr "símbolos aborígenes do Canadá Unificado"
 
 #. Name for Cari
-#, fuzzy
 msgid "Carian"
-msgstr "cariana"
+msgstr "cario"
 
 #. Name for Cham
 msgid "Cham"
@@ -183,18 +181,16 @@ msgid "Elbasan"
 msgstr "elbasan"
 
 #. Name for Ethi
-#, fuzzy
 msgid "Ethiopic (Geʻez)"
-msgstr "etiópico"
+msgstr "etiópico (ge'ez)"
 
 #. Name for Geok
 msgid "Khutsuri (Asomtavruli and Nuskhuri)"
 msgstr ""
 
 #. Name for Geor
-#, fuzzy
 msgid "Georgian (Mkhedruli)"
-msgstr "khutsuri georgiano"
+msgstr "georgiano (mkhedruli)"
 
 #. Name for Glag
 msgid "Glagolitic"
@@ -237,18 +233,16 @@ msgid "Hanunoo (Hanunóo)"
 msgstr "hanunoo (hanunó'o)"
 
 #. Name for Hans
-#, fuzzy
 msgid "Han (Simplified variant)"
-msgstr "han simplificado"
+msgstr "han (variante simplificada)"
 
 #. Name for Hant
-#, fuzzy
 msgid "Han (Traditional variant)"
-msgstr "han tradicional"
+msgstr "han (variante tradicional)"
 
 #. Name for Hatr
 msgid "Hatran"
-msgstr ""
+msgstr "aramaico de Hatra"
 
 #. Name for Hebr
 msgid "Hebrew"
@@ -276,11 +270,11 @@ msgstr ""
 
 #. Name for Inds
 msgid "Indus (Harappan)"
-msgstr ""
+msgstr "indus (harapeano)"
 
 #. Name for Ital
 msgid "Old Italic (Etruscan, Oscan, etc.)"
-msgstr ""
+msgstr "itálico antigo (etrusco, osco, etc.)"
 
 #. Name for Jamo
 msgid "Jamo (alias for Jamo subset of Hangul)"
