--- a/messages/pt_BR/LC_MESSAGES/15924.po
+++ b/messages/pt_BR/LC_MESSAGES/15924.po
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2019-04-05 15:04+0000\n"
+"PO-Revision-Date: 2019-04-19 13:34+0000\n"
 "Last-Translator: Rui Mendes <xz9@protonmail.com>\n"
 "Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
 "iso-codes/iso-15924/pt_BR/>\n"
@@ -267,7 +267,7 @@ msgstr "Húngaro antigo (rúnico húngaro)"
 
 #. Name for Inds
 msgid "Indus (Harappan)"
-msgstr "Indus (Harappano)"
+msgstr "Indus (Harapeano)"
 
 #. Name for Ital
 msgid "Old Italic (Etruscan, Oscan, etc.)"
