--- a/messages/pt/LC_MESSAGES/639-3.po
+++ b/messages/pt/LC_MESSAGES/639-3.po
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2019-04-05 15:04+0000\n"
+"PO-Revision-Date: 2019-04-19 13:34+0000\n"
 "Last-Translator: Rui Mendes <xz9@protonmail.com>\n"
 "Language-Team: Portuguese <https://hosted.weblate.org/projects/iso-codes/"
 "iso-639-3/pt/>\n"
@@ -6335,7 +6335,7 @@ msgstr ""
 
 #. Name for ccp
 msgid "Chakma"
-msgstr ""
+msgstr "chakma"
 
 #. Name for ccr
 msgid "Cacaopera"
@@ -38049,9 +38049,8 @@ msgid "Chorasmian"
 msgstr "córsico"
 
 #. Name for xcr
-#, fuzzy
 msgid "Carian"
-msgstr "cariana"
+msgstr "cario"
 
 #. Name for xct
 msgid "Classical Tibetan"
