--- a/messages/de/LC_MESSAGES/639-3.po
+++ b/messages/de/LC_MESSAGES/639-3.po
@@ -20,14 +20,15 @@
 # Daniel Schury <Daniel.Schury@physik.uni-giessen.de>, 2012.
 # Hendrik Knackstedt <hendrik.knackstedt@t-online.de>, 2012.
 # Dr. Tobias Quathamer <toddy@debian.org>, 2019.
+# ssantos <ssantos@web.de>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-3\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2019-03-23 21:34+0000\n"
-"Last-Translator: Dr. Tobias Quathamer <toddy@debian.org>\n"
+"PO-Revision-Date: 2019-05-19 10:49+0000\n"
+"Last-Translator: ssantos <ssantos@web.de>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/iso-codes/"
 "iso-639-3/de/>\n"
 "Language: de\n"
@@ -35,7 +36,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.6-dev\n"
+"X-Generator: Weblate 3.7-dev\n"
 
 #. Name for aaa
 msgid "Ghotuo"
@@ -10725,7 +10726,7 @@ msgstr "Guatemalische Gebärdensprache"
 
 #. Name for gsn
 msgid "Nema"
-msgstr ""
+msgstr "Nema"
 
 #. Name for gso
 msgid "Southwest Gbaya"
@@ -11739,7 +11740,7 @@ msgstr "Hrangkhol"
 
 #. Name for hrc
 msgid "Niwer Mil"
-msgstr ""
+msgstr "Niwer Mil"
 
 #. Name for hre
 msgid "Hre"
@@ -11763,7 +11764,7 @@ msgstr "Hroy"
 
 #. Name for hrp
 msgid "Nhirrpi"
-msgstr ""
+msgstr "Nhirrpi"
 
 #. Name for hrt
 msgid "Hértevin"
@@ -12259,7 +12260,7 @@ msgstr "Yi, Sichuan"
 
 #. Name for iin
 msgid "Thiin"
-msgstr ""
+msgstr "Thiin"
 
 #. Name for ijc
 msgid "Izon"
@@ -12528,7 +12529,7 @@ msgstr "Iquito"
 
 #. Name for iqw
 msgid "Ikwo"
-msgstr ""
+msgstr "Ikwo"
 
 #. Name for ire
 msgid "Iresim"
@@ -12784,7 +12785,7 @@ msgstr "Izere"
 
 #. Name for izz
 msgid "Izii"
-msgstr ""
+msgstr "Izii"
 
 #. Name for jaa
 msgid "Jamamadí"
@@ -13089,7 +13090,7 @@ msgstr "Jinuo, Buyuan"
 
 #. Name for jje
 msgid "Jejueo"
-msgstr ""
+msgstr "Jejueo"
 
 #. Name for jjr
 msgid "Bankal"
@@ -13097,7 +13098,7 @@ msgstr "Bankal"
 
 #. Name for jka
 msgid "Kaera"
-msgstr ""
+msgstr "Kaera"
 
 #. Name for jkm
 msgid "Mobwa Karen"
@@ -13225,7 +13226,7 @@ msgstr "Wojenaka"
 
 #. Name for jog
 msgid "Jogi"
-msgstr ""
+msgstr "Jogi"
 
 #. Name for jor
 msgid "Jorá"
@@ -13744,7 +13745,7 @@ msgstr "Karamojong"
 
 #. Name for kdk
 msgid "Numèè"
-msgstr ""
+msgstr "Numèè"
 
 #. Name for kdl
 msgid "Tsikimba"
@@ -16475,7 +16476,7 @@ msgstr "Lamatuka"
 
 #. Inverted name for lay
 msgid "Bai, Lama"
-msgstr ""
+msgstr "Bai, Lama"
 
 #. Name for laz
 msgid "Aribwatsa"
@@ -16633,7 +16634,7 @@ msgstr "Lisabata-Nuniali"
 
 #. Name for lda
 msgid "Kla-Dan"
-msgstr ""
+msgstr "Kla, Dan"
 
 #. Name for ldb
 msgid "Dũya"
@@ -17011,7 +17012,7 @@ msgstr "Libinza"
 
 #. Name for lja
 msgid "Golpa"
-msgstr ""
+msgstr "Golpa"
 
 #. Name for lje
 msgid "Rampi"
@@ -18501,7 +18502,7 @@ msgstr "Naki"
 
 #. Name for mfg
 msgid "Mogofin"
-msgstr ""
+msgstr "Mogofin"
 
 #. Name for mfh
 msgid "Matal"
@@ -20966,7 +20967,7 @@ msgstr "Neapolitanisch"
 
 #. Name for naq
 msgid "Khoekhoe"
-msgstr ""
+msgstr "Khoekhoe"
 
 #. Name for nar
 msgid "Iguta"
@@ -20978,7 +20979,7 @@ msgstr "Nasioi"
 
 #. Name for nat
 msgid "Ca̱hungwa̱rya̱"
-msgstr ""
+msgstr "Hungworo, Kanji"
 
 #. Name for nau
 msgid "Nauru"
@@ -22651,7 +22652,7 @@ msgstr "Naga, Süd-Rengma"
 
 #. Name for nrf
 msgid "Jèrriais"
-msgstr ""
+msgstr "Jèrriais"
 
 #. Name for nrg
 msgid "Narango"
@@ -23661,7 +23662,7 @@ msgstr "Okpe (Nordwest-Edo)"
 
 #. Name for ola
 msgid "Walungge"
-msgstr ""
+msgstr "Zentral-Tibetanisch"
 
 #. Name for old
 msgid "Mochi"
@@ -24662,7 +24663,7 @@ msgstr "Kreol-Arabisch, Sudanesisch"
 
 #. Name for pgd
 msgid "Gāndhārī"
-msgstr ""
+msgstr "Gandhari"
 
 #. Name for pgg
 msgid "Pangwali"
@@ -25808,7 +25809,7 @@ msgstr "Gapapaiwa"
 
 #. Name for pwi
 msgid "Patwin"
-msgstr ""
+msgstr "Patwin"
 
 #. Name for pwm
 msgid "Molbog"
@@ -27053,7 +27054,7 @@ msgstr "Okinawan, Zentrales"
 
 #. Name for rzh
 msgid "Rāziḥī"
-msgstr ""
+msgstr "Razihi"
 
 #. Name for saa
 msgid "Saba"
@@ -27177,7 +27178,7 @@ msgstr "Saliba"
 
 #. Name for sbf
 msgid "Chabu"
-msgstr ""
+msgstr "Shabo/Mikeyir"
 
 #. Name for sbg
 msgid "Seget"
@@ -30869,7 +30870,7 @@ msgstr "Taino"
 
 #. Name for tnr
 msgid "Ménik"
-msgstr ""
+msgstr "Bedik"
 
 #. Name for tns
 msgid "Tenis"
@@ -30901,7 +30902,7 @@ msgstr "Tongwe"
 
 #. Name for tnz
 msgid "Ten'edn"
-msgstr ""
+msgstr "Ten'edn/Kensiu/Mos"
 
 #. Name for tob
 msgid "Toba"
@@ -31845,7 +31846,7 @@ msgstr "Ikpeng"
 
 #. Name for txj
 msgid "Tarjumo"
-msgstr ""
+msgstr "Tarjumo"
 
 #. Name for txm
 msgid "Tomini"
@@ -33179,7 +33180,7 @@ msgstr "Wadjigu"
 
 #. Name for wdy
 msgid "Wadjabangayi"
-msgstr ""
+msgstr "Bidjara"
 
 #. Name for wea
 msgid "Wewaw"
@@ -33195,7 +33196,7 @@ msgstr "Wedau"
 
 #. Name for weg
 msgid "Wergaia"
-msgstr ""
+msgstr "Wergaia"
 
 #. Name for weh
 msgid "Weh"
@@ -33283,7 +33284,7 @@ msgstr "Warrgamay"
 
 #. Name for wha
 msgid "Sou Upaa"
-msgstr ""
+msgstr "Manusela"
 
 #. Name for whg
 msgid "North Wahgi"
@@ -33771,11 +33772,11 @@ msgstr "Warembori"
 
 #. Name for wsg
 msgid "Adilabad Gondi"
-msgstr ""
+msgstr "Gondi"
 
 #. Inverted name for wsg
 msgid "Gondi, Adilabad"
-msgstr ""
+msgstr "Gondi, Adilabad"
 
 # HKA: Thai
 # AA: Thailändisch
@@ -33982,7 +33983,7 @@ msgstr "Paranawát"
 
 #. Name for xak
 msgid "Máku"
-msgstr ""
+msgstr "Maku/Maco"
 
 #. Name for xal
 msgid "Kalmyk"
@@ -34092,7 +34093,7 @@ msgstr "Bolgarisch"
 
 #. Name for xbp
 msgid "Bibbulman"
-msgstr ""
+msgstr "Bibbulmanisch"
 
 #. Name for xbr
 msgid "Kambera"
@@ -34741,7 +34742,7 @@ msgstr "Nukumanu"
 
 #. Name for xny
 msgid "Nyiyaparli"
-msgstr ""
+msgstr "Nyiyaparli"
 
 #. Name for xnz
 msgid "Kenzi"
@@ -35054,7 +35055,7 @@ msgstr "Gaulish, Transalpine"
 
 #. Name for xth
 msgid "Yitha Yitha"
-msgstr ""
+msgstr "Jitajita"
 
 #. Name for xti
 msgid "Sinicahua Mixtec"
@@ -35312,7 +35313,7 @@ msgstr "Kwerba Mamberamo"
 
 #. Name for xwt
 msgid "Wotjobaluk"
-msgstr ""
+msgstr "Wergaia/Werrigia"
 
 #. Name for xww
 #, fuzzy
@@ -35342,7 +35343,7 @@ msgstr "Tambora"
 
 #. Name for xya
 msgid "Yaygir"
-msgstr ""
+msgstr "Yaygir"
 
 #. Name for xyb
 #, fuzzy
@@ -35351,7 +35352,7 @@ msgstr "Yindjibarndi"
 
 #. Name for xyj
 msgid "Mayi-Yapi"
-msgstr ""
+msgstr "Maijabi/Mayi-Yapi"
 
 #. Name for xyk
 #, fuzzy
@@ -35364,7 +35365,7 @@ msgstr "Yalakalore"
 
 #. Name for xyt
 msgid "Mayi-Thakurti"
-msgstr ""
+msgstr "Mayi-Kulan"
 
 #. Name for xyy
 msgid "Yorta Yorta"
@@ -35672,7 +35673,7 @@ msgstr "Polnische Gebärdensprache"
 
 #. Name for ygu
 msgid "Yugul"
-msgstr ""
+msgstr "Yugul/Yukul"
 
 #. Name for ygw
 msgid "Yagwoia"
@@ -36179,7 +36180,7 @@ msgstr "Nhengatu"
 
 #. Name for yrm
 msgid "Yirrk-Mel"
-msgstr ""
+msgstr "Yirrk-Thangalkl/Yir Thangedl"
 
 #. Name for yrn
 msgid "Yerong"
@@ -36187,7 +36188,7 @@ msgstr "Yerong"
 
 #. Name for yro
 msgid "Yaroamë"
-msgstr ""
+msgstr "Yaroamë/Jawari"
 
 #. Name for yrs
 msgid "Yarsun"
@@ -36270,7 +36271,7 @@ msgstr "Yout Wam"
 
 #. Name for yty
 msgid "Yatay"
-msgstr ""
+msgstr "Gudang/Djagaraga"
 
 #. Name for yua
 msgid "Yucateco"
@@ -36449,11 +36450,11 @@ msgstr "Kariyarra"
 
 #. Name for yxm
 msgid "Yinwum"
-msgstr ""
+msgstr "Yinwum/Jinwum"
 
 #. Name for yxu
 msgid "Yuyu"
-msgstr ""
+msgstr "Yuyu/Yirau"
 
 #. Name for yxy
 msgid "Yabula Yabula"
@@ -36749,7 +36750,7 @@ msgstr "Standardisiertes Marokkanisches Tamazight"
 
 #. Inverted name for zgh
 msgid "Tamazight, Standard Moroccan"
-msgstr ""
+msgstr "Berberisch, Standard Marrokanisch"
 
 #. Name for zgm
 msgid "Minz Zhuang"
