--- a/messages/nb/LC_MESSAGES/639-2.po
+++ b/messages/nb/LC_MESSAGES/639-2.po
@@ -8,23 +8,23 @@
 # Rune Nordvik <rune@linuxnorge.com>, 2001.
 # Alastair McKinstry <mckinstry@debian.org>, 2002.
 # Kjartan Maraas <kmaraas@broadpark.no>, 2009.
-# Allan Nordhøy <epost@anotheragency.no>, 2018.
+# Allan Nordhøy <epost@anotheragency.no>, 2018, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2018-09-19 06:30+0000\n"
+"PO-Revision-Date: 2019-05-17 01:48+0000\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>\n"
-"Language-Team: Norwegian Bokmål <https://hosted.weblate.org/projects/iso-"
-"codes/iso-639-2/nb/>\n"
+"Language-Team: Norwegian Bokmål <https://hosted.weblate.org/projects/"
+"iso-codes/iso-639-2/nb_NO/>\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.2-dev\n"
+"X-Generator: Weblate 3.7-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -54,7 +54,7 @@ msgstr ""
 
 #. Name for afa
 msgid "Afro-Asiatic languages"
-msgstr ""
+msgstr "Afroasiatiske språk"
 
 #. Name for afh
 msgid "Afrihili"
@@ -84,7 +84,7 @@ msgstr ""
 
 #. Name for alg
 msgid "Algonquian languages"
-msgstr ""
+msgstr "Algonkinske språk"
 
 #. Name for alt
 #, fuzzy
@@ -148,7 +148,7 @@ msgstr ""
 
 #. Name for ath
 msgid "Athapascan languages"
-msgstr ""
+msgstr "Dene-språk"
 
 #. Name for aus
 msgid "Australian languages"
@@ -229,18 +229,16 @@ msgid "Bangla"
 msgstr ""
 
 #. Name for ber
-#, fuzzy
 msgid "Berber languages"
-msgstr "Koreansk"
+msgstr "Berbiske språk"
 
 #. Name for bho
 msgid "Bhojpuri"
 msgstr ""
 
 #. Name for bih
-#, fuzzy
 msgid "Bihari languages"
-msgstr "Koreansk"
+msgstr "Bihari"
 
 #. Name for bik
 msgid "Bikol"
@@ -306,7 +304,7 @@ msgstr ""
 
 #. Name for cai
 msgid "Central American Indian languages"
-msgstr "Sentralamerikanske indianske språk"
+msgstr "Indianerspråk"
 
 #. Name for car
 #, fuzzy
@@ -318,9 +316,8 @@ msgid "Catalan; Valencian"
 msgstr ""
 
 #. Name for cau
-#, fuzzy
 msgid "Caucasian languages"
-msgstr "Koreansk"
+msgstr "Kaukasiske språk"
 
 #. Name for ceb
 msgid "Cebuano"
