--- a/messages/pt/LC_MESSAGES/639-3.po
+++ b/messages/pt/LC_MESSAGES/639-3.po
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2019-04-05 15:04+0000\n"
+"PO-Revision-Date: 2019-05-09 15:49+0000\n"
 "Last-Translator: Rui Mendes <xz9@protonmail.com>\n"
 "Language-Team: Portuguese <https://hosted.weblate.org/projects/iso-codes/"
 "iso-639-3/pt/>\n"
@@ -24,7 +24,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 3.6-dev\n"
+"X-Generator: Weblate 3.7-dev\n"
 
 #. Name for aaa
 msgid "Ghotuo"
@@ -300,9 +300,8 @@ msgid "Gikyode"
 msgstr ""
 
 #. Name for ace
-#, fuzzy
 msgid "Achinese"
-msgstr "Chinês"
+msgstr "achinês"
 
 #. Name for acf
 msgid "Saint Lucian Creole French"
@@ -635,7 +634,7 @@ msgstr "salishan languages"
 
 #. Name for afh
 msgid "Afrihili"
-msgstr "Afrihili"
+msgstr "afrihili"
 
 #. Name for afi
 msgid "Akrukay"
@@ -6335,7 +6334,7 @@ msgstr ""
 
 #. Name for ccp
 msgid "Chakma"
-msgstr ""
+msgstr "chakma"
 
 #. Name for ccr
 msgid "Cacaopera"
@@ -8899,9 +8898,8 @@ msgid "Domu"
 msgstr ""
 
 #. Name for doh
-#, fuzzy
 msgid "Dong"
-msgstr "mongo"
+msgstr "Dongue"
 
 #. Name for doi
 msgid "Dogri (macrolanguage)"
@@ -11879,7 +11877,7 @@ msgstr ""
 
 #. Name for grn
 msgid "Guarani"
-msgstr "guarani"
+msgstr "Guarani"
 
 #. Name for gro
 #, fuzzy
@@ -19602,9 +19600,8 @@ msgid "Loarki"
 msgstr "lozi"
 
 #. Name for lrl
-#, fuzzy
 msgid "Lari"
-msgstr "Margens"
+msgstr "Lari"
 
 #. Name for lrm
 #, fuzzy
@@ -31514,9 +31511,8 @@ msgid "Simbari"
 msgstr "Tailandês"
 
 #. Name for smc
-#, fuzzy
 msgid "Som"
-msgstr "somali"
+msgstr "Som"
 
 #. Name for smd
 #, fuzzy
@@ -32967,9 +32963,8 @@ msgid "Tamang, Eastern"
 msgstr ""
 
 #. Name for tak
-#, fuzzy
 msgid "Tala"
-msgstr "tatar"
+msgstr "Tala"
 
 #. Name for tal
 #, fuzzy
@@ -38049,9 +38044,8 @@ msgid "Chorasmian"
 msgstr "córsico"
 
 #. Name for xcr
-#, fuzzy
 msgid "Carian"
-msgstr "cariana"
+msgstr "cario"
 
 #. Name for xct
 msgid "Classical Tibetan"
@@ -40855,9 +40849,8 @@ msgid "Berawan, East"
 msgstr "arauaqui"
 
 #. Name for zbl
-#, fuzzy
 msgid "Blissymbols"
-msgstr "símbolos bliss"
+msgstr "símbolos Bliss"
 
 #. Name for zbt
 #, fuzzy
